@@ -24,3 +24,15 @@ sec2 = 'Hello Section2'
 [.hidden]
 hiddentext = Hidden Section
 
+#Comment
+# Comment with a space first line first
+ #Comment line starting with space
+ # Space before and after #
+#The line below only contains a #
+#
+#
+# title = This is not the correct title
+
+#[section1]
+#sec1 = Wrong text
+
